--- a/class_blog_jpa_v1/src/main/resources/application.yml
+++ b/class_blog_jpa_v1/src/main/resources/application.yml
@@ -1,15 +1,16 @@
 spring:
   application:
-    name: class_blog_jap_v1
+    name: class_blog_jpa_v1
 
   server:
     port: 8080
-
+  
   datasource:
     url: jdbc:mysql://localhost:3306/jpa_demo?useSSL=false&serverTimeZone=Asia/Seoul
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
+    username: root 
     password: asd123
 
   profiles:
-    active: dev # 기본 활성화 프로파일을 dev로 설정한다.
+    active: dev  # prod  # 기본 활성화 프로파일을 dev로 설정 	
+ 
